[package]
name = "blob"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.32"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] } # needed for random bindings

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true
