[package]
name = "blob"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.32"
rand = "0.8"
js-sys = "0.3"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.web-sys]
version = "0.3"
features = [
  "WebGlUniformLocation",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlDivElement",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "Window",
  "MouseEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "console",
]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
